--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jokes Generator</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="main.js" type="text/javascript"></script>
 </head>
 <body>
     <div class ="container">
